text aligned correctly

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -50,7 +50,7 @@ nav {
 }
 
 .clearfix {
-  margin-right: 20px;
+  margin-right: 30px;
   margin-top: 20px;
 }
 
@@ -64,7 +64,7 @@ nav {
   height: 700px;
   justify-content: left;
   text-align: left;
-  margin: 0 1% 0 1%;
+  margin: 1% 1% 0 1%;
   width: 98%;
 }
 
@@ -101,13 +101,13 @@ nav {
 .container {
   margin: 0px auto;
   width: 100%;
-  text-align: center;
 }
 
 .container div {
   float: left;
   margin: 1% 1% 1% 1%;
   width: 48%;
+  overflow: hidden;
 }
 
 /* What is CREPO */
@@ -115,9 +115,24 @@ nav {
 .what-is-crepo {
   background: #FFE30A;
   background-size: cover;
-  text-align: center;
   float: left;
   height: 500px;
+}
+
+.crepo-title{
+  margin-top: 100px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.crepo-explanation {
+  display: inline-block;
+  padding-left: 15%;
+  padding-right: 15%;
+
+  /* Needs prefixing */
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
 }
 
 /* CREPO animation */
@@ -131,22 +146,35 @@ nav {
   height: 500px;
 }
 
+.crepo-gif{
+  margin-top: 75px;
+}
+
 /* Who is PPA */
 
 .who-is-ppa {
   background: url(/images/HD_1440/hd_blue_sky.png) center / cover;
   background-size: cover;
-  text-align: center;
   float: left;
-  height: 500px;
+  height: 700px;
 }
 
 .ppa-about-title {
+  margin-top: 100px;
   color: #F5F5F5;
+  text-align: center;
+  font-weight: bold;
 }
 
 .ppa-about-description {
   color: #F5F5F5;
+  display: inline-block;
+  padding-left: 15%;
+  padding-right: 15%;
+
+  /* Needs prefixing */
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
 }
 
 /* Our Services */
@@ -156,17 +184,58 @@ nav {
   background-size: cover;
   text-align: center;
   float: left;
-  height: 500px;
+  height: 700px;
+}
+
+.our-services-title{
+  margin-top: 100px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.ppa-services {
+  text-align: left;
+  display: inline-block;
+  padding-left: 15%;
+  padding-right: 15%;
+
+  /* Needs prefixing */
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+}
+
+.ppa-services {
+  list-style-image: url('/images/HD_1440/hd_logo_bullet_15.png');
 }
 
 /* Peter Sopher */
 
 .peter-sopher-president {
   background: #F5F5F5;
-  height: 60vh;
+  height: 800px;
   justify-content: center;
-  text-align: center;
   float: left;
+}
+
+.peter-profpic {
+  display: block;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+
+.peter-sopher-title {
+  text-align: center;
+}
+
+.peter-resume {
+  text-align: left;
+  display: inline-block;
+  padding-left: 30%;
+  padding-right: 30%;
+
+  /* Needs prefixing */
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
 }
 
 /* Footer */
@@ -174,29 +243,41 @@ nav {
 .footer {
   background: #050505;
   float: left;
-  margin: 1% 0;
   width: 100%;
   padding: 0;
-  height: 250px;
+  height: 225px;
+}
+
+.footer-container {
+  width: 40%;
+  float: left;
+  overflow: auto;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .contact-email-text {
+  float: left;
+  margin-top: 75px;
   color: #F5F5F5;
 }
 
 .address {
   color: #F5F5F5;
+  list-style: none;
+  float: right;
+  margin-top: 75px;
 }
 
-/* Lists */
 .social-nav {
-  list-style: none;
+  padding: 15px 0px;
+  width: 150px;
 }
 
-.address {
-  list-style: none;
-}
-
-.ppa-services {
-  list-style-image: url('/images/HD_1440/hd_logo_bullet_15.png');
+.social-nav li {
+  list-style-type: none;
+  display: inline;
+  float:left;
+  margin: 15px 10px 0px 0px;
+  align-items: left;
 }
